[gd_scene load_steps=6 format=3 uid="uid://b4t5htfm4yk6a"]

[ext_resource type="Script" path="res://scripts/character/component/health_component.gd" id="1_75tmn"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_7gj6f"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_l5r8t"]
bg_color = Color(0.211765, 0.658824, 0.462745, 1)
expand_margin_left = 1.0
expand_margin_top = 1.0
expand_margin_right = 1.0
expand_margin_bottom = 1.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_8frnl"]
bg_color = Color(0.147672, 0.147672, 0.147672, 1)
expand_margin_left = 1.0
expand_margin_top = 1.0
expand_margin_right = 1.0
expand_margin_bottom = 1.0
shadow_color = Color(0, 0, 0, 0.27451)
shadow_offset = Vector2(0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_o3vkt"]
bg_color = Color(1, 1, 1, 1)
expand_margin_left = 1.0
expand_margin_top = 1.0
expand_margin_right = 1.0
expand_margin_bottom = 1.0
shadow_color = Color(0, 0, 0, 0.27451)
shadow_offset = Vector2(0, 1)

[node name="HealthComponent" type="Node2D"]
script = ExtResource("1_75tmn")

[node name="HealthBar" type="ProgressBar" parent="."]
z_index = 1
custom_minimum_size = Vector2(150, 4)
offset_right = 1.0
offset_bottom = 1.0
theme_override_styles/background = SubResource("StyleBoxEmpty_7gj6f")
theme_override_styles/fill = SubResource("StyleBoxFlat_l5r8t")
value = 80.0
show_percentage = false

[node name="DamageBar" type="ProgressBar" parent="HealthBar"]
z_index = -1
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/background = SubResource("StyleBoxFlat_8frnl")
theme_override_styles/fill = SubResource("StyleBoxFlat_o3vkt")
value = 90.0
show_percentage = false

[node name="Timer" type="Timer" parent="."]
wait_time = 0.4
one_shot = true

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
